<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name" translatable="false">luckycloud</string>
  <string name="server_url_seacloud" translatable="false">https://storage.luckycloud.de/</string>
  <string name="server_url_sync" translatable="false">https://sync.luckycloud.de/</string>
  <string name="server_name_top" translatable="false">storage.luckycloud.de</string>
  <string name="accounts_https_hint" translatable="false">https</string>
  <string name="auto_server_url_error" translatable="false">Login failed with storage.luckycloud.de,
    try again with sync.luckycloud.de</string>
  <string name="enterprise_example_url" translatable="false">https://cloud.IhreDomain.de</string>
  <string name="support">Support</string>
  <string name="new_luckycloud_account">new Account</string>
  <string name="enterprise_login_button">Enterprise Login</string>
  <string name="setting_privacy_policy_title" >Privacy policy</string>
  <string name="biometry_login_title">Access lock</string>
  <string name="welcome_to_seafile">Welcome to luckycloud</string>
  <string name="welcome_to_luckycloud">Welcome to</string>
  <string name="select_account">Choose an account to start</string>
  <string name="edit_account">Edit</string>
  <string name="delete_account">Delete</string>
  <string name="delete">Delete</string>
  <string name="delete_repo">Are you sure you want to delete this directory?</string>
  <string name="delete_file">Are you sure you want to delete this file or folder?</string>
  <string name="delete_successful">Successfully deleted</string>
  <string name="delete_repo_title">Delete directory</string>
  <string name="delete_file_f">Delete file</string>
  <string name="recover_library">Recover directory</string>
  <string name="recover_file">Recover file</string>
  <string name="move_file">Move file</string>
  <string name="update_file">Update file</string>
  <string name="recover_folder">Recover folder</string>
  <string name="move_folder">Move folder</string>
  <string name="delete_dir">Delete folder</string>
  <string name="name_hint">Name</string>
  <string name="server_hint">server address</string>
  <string name="email_hint">Email or Username</string>
  <string name="passwd_hint">Password</string>
  <string name="passwd_min_len_limit_hint">Password (at least %d characters)</string>
  <string name="passwd_confirmation_hint">Password again</string>
  <string name="login">Log In</string>
  <string name="open_file">Open</string>
  <string name="download_file">Download</string>
  <string name="redownload_file">Download again</string>
  <string name="cancel_download">Cancel</string>
  <string name="unknown_file_type">Unknown file-type</string>
  <string name="activity_not_found">Can\`t find App to open this file</string>
  <string name="refresh">Refresh</string>
  <string name="add_account">Login</string>
  <string name="personal">Personal</string>
  <string name="shared">Shared</string>
  <string name="libraries">Libraries</string>
  <string name="cached">Cached</string>
  <string name="activities">Activities</string>
  <string name="pick_upload_type">Upload</string>
  <string name="transfer_tasks">Transfer List</string>
  <string name="accounts">Accounts</string>
  <string name="settings">Settings</string>
  <string-array name="pick_upload_array">
    <item>File</item>
    <item>Photos/Videos</item>
    <item>Other</item>
  </string-array>
  <string name="choose_server">Choose a luckycloud Server</string>
  <string-array name="choose_server_array">
    <item>Single Sign-On</item>
    <item>Other luckycloud Server</item>
  </string-array>
  <string name="network_down">No network connection</string>
  <string name="unknow_error">Unknown error</string>
  <string name="invalid_server_address">Invalid server address</string>
  <string name="err_server_andress_empty">Server address can\`t be empty</string>
  <string name="err_email_empty">Email can\`t be empty</string>
  <string name="err_passwd_empty">Password can\`t be empty</string>
  <string name="err_passwd_too_short">Password is too short</string>
  <string name="err_passwd_mismatch">The passwords don\`t match</string>
  <string name="err_passwd_min_len_limit">Password must be at least %d characters long</string>
  <string name="err_login_failed">Login failed</string>
  <string name="err_wrong_user_or_passwd">Email or password error</string>
  <string name="err_token_expired">Authentication expired, please login again</string>
  <string name="upload">Upload</string>
  <string name="uploaded">Uploaded</string>
  <string name="updated">Updated</string>
  <string name="download_failed">Download failed</string>
  <string name="download_waiting">Download waiting</string>
  <string name="download_finished">Download finished</string>
  <string name="download_cancelled">Download cancelled</string>
  <string name="task_cancel">Cancel</string>
  <string name="task_retry">Retry</string>
  <string name="task_remove">Remove</string>
  <string name="task_remove_all_cancelled">Remove all cancelled tasks</string>
  <string name="task_remove_all_finished">Remove all finished tasks </string>
  <string name="repo_action_delete">Delete</string>
  <string name="repo_action_rename">Rename</string>
  <string name="file_action_star">Star</string>
  <string name="file_action_download">Download</string>
  <string name="file_action_update">Upload</string>
  <string name="file_share">Share</string>
  <string name="file_action_share_wechat">Share to WeChat</string>
  <string name="file_action_share_link">Share link</string>
  <string name="file_action_share_encrypt">Share link with password</string>
  <string name="file_action_export">Export</string>
  <string name="file_action_open">Open with</string>
  <string name="file_action_delete">Delete</string>
  <string name="file_action_rename">Rename</string>
  <string name="file_action_copy">Copy</string>
  <string name="file_action_move">Move</string>
  <string name="file_action_open_as">Open as</string>
  <string name="file_action_more">More</string>
  <string name="file_action_more_title">Choose your preferred option</string>
  <string-array name="file_action_more_array">
    <item>Export</item>
    <item>Copy</item>
    <item>Move</item>
    <item>Star</item>
  </string-array>
  <string-array name="file_type_array">
    <item>Text</item>
    <item>Audio</item>
    <item>Video</item>
    <item>Image</item>
    <item>Other</item>
  </string-array>
  <string-array name="file_action_share_array_zh" translatable="false">
    <item>@string/file_action_share_wechat</item>
    <item>@string/file_action_share_link</item>
    <item>@string/file_action_share_encrypt</item>
  </string-array>
  <string-array name="file_action_share_array" translatable="false">
    <item>@string/file_action_share_link</item>
    <item>@string/file_action_share_encrypt</item>
  </string-array>
  <string name="wait">Wait</string>
  <string name="image_gallery_NoImageView_text">No image found</string>
  <string name="pick_photo_video_title">Choose photos/videos to upload</string>
  <string name="select_upload_items">Select items to upload</string>
  <plurals name="n_upload_items_selected">
    <item quantity="one">%1$d item selected</item>
    <item quantity="other">%1$d items selected</item>
  </plurals>
  <string name="repo_name_empty">Please enter the name of the directory</string>
  <string name="dir_name_empty">Please enter the name of the folder</string>
  <string name="file_name_empty">Please enter the name of the file</string>
  <string name="password_empty">Please enter the password</string>
  <string name="wrong_password">wrong password</string>
  <string name="library_read_only">This directory is read-only</string>
  <string name="error_when_load_dirents">Error when loading the folder.\n Tap to refresh</string>
  <string name="error_when_load_repos">Error when loading libraries.\n Tap to refresh</string>
  <string name="error_when_load_activities">Error when loading activities.\n Tap to refresh</string>
  <string name="error_when_load_starred">Error when loading starred files.\n Tap to refresh</string>
  <string name="dir_empty">This folder is empty</string>
  <string name="no_repo">You have no libraries yet</string>
  <string name="no_app_available">No app can be found</string>
  <string name="add_to_seafile">Add to luckycloud</string>
  <string name="ok">OK</string>
  <string name="no_account">Please set up an account in luckycloud first</string>
  <string name="choose_an_account">Choose an account</string>
  <string name="choose_a_library">Choose a directory</string>
  <string name="choose_a_folder">Choose a folder</string>
  <string name="load_accounts_fail">Failed to load luckycloud accounts</string>
  <string name="luckycloud_load_accounts_fail">Failed to load luckycloud accounts</string>
  <string name="load_libraries_fail">Failed to load libraries</string>
  <string name="load_dir_fail">Failed to load contents of this folder</string>
  <string name="not_supported_share">This type of share is not supported</string>
  <string name="edit">Edit</string>
  <string name="confirm">Confirm</string>
  <string name="settings_cuc_title">Configuration Helper</string>
  <string name="settings_cuc_welcome_text1">Thanks for using the camera upload configuration helper.</string>
  <string name="settings_cuc_welcome_text2">To help you get started with the camera upload service, you\'ll be guided through a few initial steps.</string>
  <string name="settings_cuc_click_btn">Click to close the configuration helper.</string>
  <string name="undo">undo</string>
  <string name="redo">redo</string>
  <string name="cuc_how_to_upload_detail">Choose what you prefer, you can change it \nin the settings at any time.</string>
  <string name="cuc_what_to_upload_title">What should be uploaded?</string>
  <string name="cuc_what_to_upload_first_radio">Only pictures</string>
  <string name="cuc_what_to_upload_second_radio">Pictures and videos</string>
  <string name="cuc_ready_to_scan_title">Finished</string>
  <string name="cuc_ready_to_scan_detail">luckycloud will now upload the files from the \nselected folders. \nYou can close the app and the setup wizard.</string>
  <string name="luckycloud_settings_about_author_client">luckycloud Android Client</string>
  <string name="luckycloud_settings_about_author_client_url">Based on seadroid\nhttps://github.com/haiwen/seadroid</string>
  <string name="luckycloud_settings_about_author_licenses">Licenses</string>
  <string name="luckycloud_settings_about_author_licenses_url">https://github.com/haiwen/seadroid/blob/master/LICENSE.md\nhttps://github.com/haiwen/seadroid/blob/master/THIRD_PARTY_LICENSE.md</string>
  <string name="save">Save</string>
  <string name="exception_enc_repo">Exception for encrypted directories</string>
  <string name="using_enc_repo">You are using encrypted directories in the camera upload / folder backup.</string>
  <string name="make_exception_used_encrypted_repo">Would you like to make an exception for the used encrypted directories?</string>
  <string name="pdf_file_name">File name</string>
  <string name="pdf_file_size">File size</string>
  <string name="title">Title</string>
  <string name="subject">Subject</string>
  <string name="author">Author</string>
  <string name="creator">Creator</string>
  <string name="producer">Producer</string>
  <string name="creation_date">Creation Date</string>
  <string name="modified_date">Modified Date</string>
  <string name="keywords">Keywords</string>
  <string name="language">Language</string>
  <string name="pdf_version">Pdf Version</string>
  <string name="fast_webview">Fast Webview</string>
  <string name="view">View</string>
  <string name="view_mode">View mode</string>
  <string name="edit_mode">Edit mode</string>
  <string name="wrap_words">Wrap words\u00A0</string>
  <string name="line_numbers">Line numbers\u00A0</string>
  <string name="syntax_highlighting">Syntax highlighting\u00A0</string>
</resources>