<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/cuc_upload_type_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/tv_title_margin_left"
        android:layout_marginTop="@dimen/tv_title_margin_top"
        android:text="@string/cuc_what_to_upload_title"
        android:textAlignment="center"
        android:textColor="@color/luckycloud_green"
        android:textSize="@dimen/subtopic_txt_size" />

    <TextView
        android:id="@+id/cuc_upload_hint_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cuc_upload_type_title_tv"
        android:layout_alignStart="@+id/cuc_upload_type_title_tv"
        android:layout_marginTop="@dimen/section_margin_top"
        android:layout_marginEnd="30dp"
        android:text="@string/cuc_how_to_upload_detail"
        android:textAlignment="center"
        android:textColor="@color/fancy_gray"
        android:textSize="@dimen/subtitle_txt_size" />

    <RadioGroup
        android:id="@+id/cuc_upload_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/cuc_upload_photos_rb"
        android:layout_alignStart="@+id/cuc_upload_hint_tv"
        android:layout_below="@+id/cuc_upload_hint_tv"
        android:layout_marginTop="@dimen/section_margin_top" >

        <RadioButton
            android:id="@+id/cuc_upload_photos_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tv_subtitle_margin_top"
            android:paddingStart="@dimen/radio_text_padding"
            android:button="@drawable/rounded_checkbox2"
            android:textColor="@color/text_view_color"
            android:text="@string/cuc_what_to_upload_first_radio"/>

        <RadioButton
            android:id="@+id/cuc_upload_photos_and_videos_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rb_margin_top"
            android:paddingStart="@dimen/radio_text_padding"
            android:button="@drawable/rounded_checkbox2"
            android:textColor="@color/text_view_color"
            android:text="@string/cuc_what_to_upload_second_radio"/>
    </RadioGroup>
</RelativeLayout>